--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,6 @@
 {
-  "singleQuote": false, 
-  "semi": false,
+  "singleQuote": true, 
+  "semi": true,
   "printWidth": 80,
-  "tabWidth": 4,
-  "quoteProps": "preserve"
+  "tabWidth": 4
 }
